# hearts

./: Cargo.toml  README.md  TODO.md
.sqlx/: query-0c330870d1c8b2967bc694aa2df3668fbedc736504b02be1a8ed8728a0d73838.json  query-3f93186000f2010772b3c9b3fa9b77376d5ee652790a8eb49d6fc989b9d47f18.json  query-772dd96f3294046cfc2b073eb77952bb99d45a5a536dad975b599581113345cf.json  query-903f32b1a778dd271cc5d6216ae9f0fe451e0cf30c31f3e2700a17da49fed062.json  query-9c4b03af2c2ad9ed50af8f1624e8fbc6ca48b41ddd95cf9fbb4e6ee8bd26d008.json  query-c603274f582a46544c772bc326b6e796955206f862d25afd7235aa7850340614.json  query-cd1cdb3d711332627886c93cbe41f4604d74c961ee758b545794c2ad1b7a7cf4.json
assets/css/: room.css  simple-grid.css  styles.css  timer.css
assets/js/: app.js  constants.js  messages.js  render.js  room.js
migrations/: 20231019202733-create-schema.sql  20231114132333_create_user_table.sql  20231118082133_room_schema.sql
src/: constants.rs  data.rs  db.rs  main.rs  room.rs  router.rs  templ.rs  user.rs  utils.rs  websocket.rs
src/templates/: base.html  index.html  room.html
